platform/k8s/base/services/notification/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: notification
        component: backend
    spec:
      containers:
        - name: notification
          image: nitros64/notification-service:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
              name: http
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            initialDelaySeconds: 10
            periodSeconds: 10
