platform/k8s/base/services/notification/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-notification
spec:
  selector:
    app: postgres-notification
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
