platform/k8s/base/services/notification/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-service-netpol
  namespace: atlas
spec:
  podSelector:
    matchLabels:
      app: notification
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: atlas
      ports:
        - protocol: TCP
          port: 8090

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres-notification
      ports:
        - protocol: TCP
          port: 5432

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
